recursion.lessons.recursion.tree.Tree.scala.error
Tree:4: error: '<-' expected but ')' found.
for (p<0 to 3){
             ^Tree:13: error: illegal start of simple expression
}
^